-fixed the spacing of the food options overlapping the order box

--- a/public/html_ref/css/index.css
+++ b/public/html_ref/css/index.css
@@ -10,6 +10,10 @@ h1 {
   height: 60px;
 }
 
+food_box{
+  width: 75%;
+}
+
 #food_box img {
   height: 170px;
   width: 200px;
